EZAF-3514 | internal nfs object storage example

--- a/Data-Science/Ray/Ray-Custome-Storage-Path/ray-custom-nfs-internal-s3-storage.ipynb
+++ b/Data-Science/Ray/Ray-Custome-Storage-Path/ray-custom-nfs-internal-s3-storage.ipynb
@@ -70,6 +70,8 @@
     "import ray\n",
     "import os\n",
     "import boto3\n",
+    "import botocore\n",
+    "import time\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "# Number of workers to use\n",
