--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -40,7 +40,7 @@
     "s3_data[\"stringData\"][\"AWS_ACCESS_KEY_ID\"] = os.environ['AUTH_TOKEN']\n",
     "s3_data[\"stringData\"][\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
     "\n",
-    "s3_data[\"metadata\"][\"annotations\"][\"serving.kserve.io/s3-endpoint\"] = os.environ['MLFLOW_S3_ENDPOINT_URL'].replace(\"http://\",\"\")\n",
+    "s3_data[\"metadata\"][\"annotations\"][\"serving.kserve.io/s3-endpoint\"] = \"local-s3-service.ezdata-system.svc.cluster.local:30000\"\n",
     "s3_data[\"metadata\"][\"namespace\"] = os.environ['USER']\n",
     "\n",
     "# Save the JSON data to a file\n",
