--- a/Data-Analytics/Spark-S3-secret/spark-secret-creation.ipynb
+++ b/Data-Analytics/Spark-S3-secret/spark-secret-creation.ipynb
@@ -12,8 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (344526381.py, line 26)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Cell \u001B[0;32mIn[2], line 26\u001B[0;36m\u001B[0m\n\u001B[0;31m    s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\",  <S3_OBJECT_STORE_SECRET_KEY>)\u001B[0m\n\u001B[0m                                                                    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -34,6 +43,14 @@
     "\n",
     "s3_data = s3_access_data.replace('EXAMPLE_ACCESS_KEY', os.environ['AUTH_TOKEN'])\n",
     "s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\", \"s3\")\n",
+    "\n",
+    "#To connect directly to S3 object, comment the above 2 lines and\n",
+    "#uncomment the following 2 lines.\n",
+    "#Replace the <S3_OBJECT_STORE_ACCESS_KEY> with object store access key\n",
+    "#Replace the <S3_OBJECT_STORE_SECRET_KEY> with object store secret key\n",
+    "\n",
+    "#s3_data = s3_access_data.replace('EXAMPLE_ACCESS_KEY', <S3_OBJECT_STORE_ACCESS_KEY>)\n",
+    "#s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\",  <S3_OBJECT_STORE_SECRET_KEY>)\n",
     "\n",
     "namespace = os.environ['USER']\n",
     "spark_secret = \"spark-s3-secret\"\n",
