question-answering: Upgrade to EZuA version 1.2.0
Update the Question-Answering demo to work with EzUA version
`1.2.0`. Moreover, instead of using conda to create a new virtual
environment, use Python venv as it is significantly faster.

Closes: #98

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/question-answering/02.serve-vectorstore.ipynb
@@ -57,6 +57,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5d136311-4035-46b6-b17b-f946dd3d7ada",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7656fd38-0660-402b-bd83-72e566cd4e0f",
    "metadata": {
     "tags": []
@@ -277,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
