bike-sharing: Update Bike-Sharing to work with EzUA 1.2.0
Closes #102

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/bike-sharing/01.bike-sharing-mlflow.ipynb
+++ b/demos/bike-sharing/01.bike-sharing-mlflow.ipynb
@@ -96,6 +96,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -942,11 +956,26 @@
    "source": [
     "manifest = f\"\"\"\n",
     "apiVersion: v1\n",
+    "kind: Secret\n",
+    "metadata:\n",
+    "  name: s3creds\n",
+    "  annotations:\n",
+    "     serving.kserve.io/s3-endpoint: {os.environ[\"AWS_ENDPOINT_URL\"].replace(\"http://\", \"\")}\n",
+    "     serving.kserve.io/s3-usehttps: \"0\"\n",
+    "     serving.kserve.io/s3-useanoncredential: \"false\"\n",
+    "     serving.kserve.io/s3-cabundle: \"\"\n",
+    "type: Opaque\n",
+    "stringData:\n",
+    "  AWS_ACCESS_KEY_ID: {os.environ[\"AWS_ACCESS_KEY_ID\"]}\n",
+    "  AWS_SECRET_ACCESS_KEY: {os.environ[\"AWS_SECRET_ACCESS_KEY\"]}\n",
+    "\n",
+    "---\n",
+    "apiVersion: v1\n",
     "kind: ServiceAccount\n",
     "metadata:\n",
     "  name: kserve-minio-sa\n",
     "secrets:\n",
-    "- name: {os.getenv('USER')}-objectstore-secret\n",
+    "- name: s3creds\n",
     "\n",
     "---\n",
     "apiVersion: \"serving.kserve.io/v1beta1\"\n",
@@ -1022,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
