fraud-detection: Update for EzUA 1.2.0
Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/fraud-detection/fraud-detection.ipynb
+++ b/demos/fraud-detection/fraud-detection.ipynb
@@ -87,7 +87,15 @@
     "requests.packages.urllib3.disable_warnings(InsecureRequestWarning)\n",
     "\n",
     "# Set seaborn style\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
    ]
   },
   {
@@ -1051,11 +1059,26 @@
    "source": [
     "manifest = f\"\"\"\n",
     "apiVersion: v1\n",
+    "kind: Secret\n",
+    "metadata:\n",
+    "  name: s3creds\n",
+    "  annotations:\n",
+    "     serving.kserve.io/s3-endpoint: {os.environ[\"AWS_ENDPOINT_URL\"].replace(\"http://\", \"\")}\n",
+    "     serving.kserve.io/s3-usehttps: \"0\"\n",
+    "     serving.kserve.io/s3-useanoncredential: \"false\"\n",
+    "     serving.kserve.io/s3-cabundle: \"\"\n",
+    "type: Opaque\n",
+    "stringData:\n",
+    "  AWS_ACCESS_KEY_ID: {os.environ[\"AWS_ACCESS_KEY_ID\"]}\n",
+    "  AWS_SECRET_ACCESS_KEY: {os.environ[\"AWS_SECRET_ACCESS_KEY\"]}\n",
+    "\n",
+    "---\n",
+    "apiVersion: v1\n",
     "kind: ServiceAccount\n",
     "metadata:\n",
     "  name: kserve-minio-sa\n",
     "secrets:\n",
-    "- name: {config['CURRENT_USER']}-objectstore-secret\n",
+    "- name: s3creds\n",
     "\n",
     "---\n",
     "apiVersion: \"serving.kserve.io/v1beta1\"\n",
