--- a/demos/fraud-detection/fraud-detection.ipynb
+++ b/demos/fraud-detection/fraud-detection.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Fraud Detection (Kubeflow Pipelines - KServe)\n",
     "\n",
-    "In this tutorial, you traing a Machine Learning (ML) model to detect fraudulent transactions using the Banksim dataset.\n",
+    "In this tutorial, you training a Machine Learning (ML) model to detect fraudulent transactions using the Banksim dataset.\n",
     "This synthetically created dataset is a combination of various customer payments, made at different intervals and in\n",
     "varying amounts. Through this, you aim to create an automated system that can detect and curtail fraudulent activities\n",
     "with high accuracy.\n",
