remove unused code; resolve model saving under constant 'model'

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -97,26 +97,18 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from urllib.parse import urlparse\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import json, datetime\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
-    "from mlflow import log_metric, log_param, log_artifact\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
     "from sklearn.inspection import permutation_importance\n",
     "from mlflow.models.signature import infer_signature\n",
     "from sklearn import tree\n",
-    "\n",
-    "from pydotplus import graph_from_dot_data\n",
-    "import graphviz\n",
-    "from IPython.display import Image\n",
     "\n",
     "import itertools, os\n",
     "\n",
@@ -459,48 +451,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "VtQGsSNU8hWc"
-   },
-   "source": [
-    "## Decision Tree Visualization\n",
-    "\n",
-    "Reference: https://towardsdatascience.com/visualizing-decision-trees-with-python-scikit-learn-graphviz-matplotlib-1c50b4aa68dc \n",
-    "\n",
-    "\n",
-    "TODO: plot all trees"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "rxKIpaE-g-b1"
-   },
-   "outputs": [],
-   "source": [
-    "def model_tree_visualization(model):\n",
-    "    # generate visualization\n",
-    "    tree_dot_data = tree.export_graphviz(\n",
-    "        decision_tree=model.estimators_[0, 0],  # Get the first tree,\n",
-    "        label=\"all\",\n",
-    "        feature_names=X_train.columns,\n",
-    "        filled=True,\n",
-    "        rounded=True,\n",
-    "        proportion=True,\n",
-    "        impurity=False,\n",
-    "        precision=1,\n",
-    "    )\n",
-    "\n",
-    "    # save image\n",
-    "    graph_from_dot_data(tree_dot_data).write_png(\"model_artifacts/Decision_Tree_Visualization.png\")\n",
-    "\n",
-    "    # show tree\n",
-    "    return graphviz.Source(tree_dot_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "warpAv8RFSOI"
    },
    "source": [
@@ -527,7 +477,7 @@
    "outputs": [],
    "source": [
     "# Track params and metrics\n",
-    "def log_mlflow_run(model, signature):\n",
+    "def log_mlflow_run(model, artifact_path=experiment_name):\n",
     "    # Auto-logging for scikit-learn estimators\n",
     "    # mlflow.sklearn.autolog()\n",
     "\n",
@@ -551,7 +501,7 @@
     "        mlflow.log_metric(\"Train Loss\", s)\n",
     "\n",
     "    # Save model to artifacts\n",
-    "    mlflow.sklearn.log_model(model, \"model\")#, signature=signature)\n",
+    "    mlflow.sklearn.log_model(model, experiment_name)\n",
     "\n",
     "    # log charts\n",
     "    mlflow.log_artifacts(\"model_artifacts\")\n",
