--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -78,6 +78,7 @@
     "with open('kserve/kserve-mlflow-deploy.yaml', 'r') as file:\n",
     "    yaml_data = yaml.safe_load(file)\n",
     "\n",
+    "## set model name - tutorial default logs model under experiment name\n",
     "model_name = 'bike-sharing-exp'\n",
     "with open('best-model-uri.txt','r') as f:\n",
     "    storage_uri = f.read()\n",
