Added workflow diagram and variables to notebook. Updated README.

--- a/demos/fraud-detection/fraud-detection.ipynb
+++ b/demos/fraud-detection/fraud-detection.ipynb
@@ -94,7 +94,14 @@
     "requests.packages.urllib3.disable_warnings(InsecureRequestWarning)\n",
     "\n",
     "# Setting seaborn style\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
    ]
   },
   {
@@ -1164,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can check the status by navigating to your HPE Ezmeral Unified Analytics software dashboard, opening the sidebar navigation menu and under \"Data Science\", select \"Model Serving\". When a green tick appears next to \"fraud-detection\", the service is up and running! "
+    "Now, let's check the status of our endpoint. Navigate to your HPE Ezmeral Unified Analytics software dashboard, open the sidebar navigation menu and under \"Data Science\", select \"Model Serving\". When a green tick appears next to \"fraud-detection\", the service is up and running! "
    ]
   },
   {
