Removed ToC from README, edited final sections of notebook

--- a/demos/fraud-detection/fraud-detection.ipynb
+++ b/demos/fraud-detection/fraud-detection.ipynb
@@ -1062,21 +1062,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By leveraging several techniques rather than simply relying on one, we can validate the best model better than had we just relied on the accuracy result. A model that can predict 92% may sound promising, but not when compared to the results of other techniques. Through this methodolgy, we have validated that the KNN classifier is the best. We will deploy this model to make our predictions. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
     "# **Model Deployment**\n",
     "\n",
-    "After training and evaluating the best model for fraud detection, the next step is to deploy it into a production environment\n",
-    "where it can be used to detect fraud in real-time transactions.\n",
+    "After training and evaluating the models for fraud detection, the next step is to deploy it into a production environment\n",
+    "where it can be used to detect fraud in real-time transactions. For this demo, we will use the Logistic Regression Classifier model.\n",
     "\n",
     "Start by creating a secure environment for accessing the S3 endpoint. To this\n",
     "end, you create a ServiceAccount object, associating it with a secret to establish an identity for the deployment\n",
@@ -1140,7 +1133,7 @@
     "          cpu: 0.5\n",
     "        limits:\n",
     "          cpu: 0.5\n",
-    "      storageUri: \"s3://{config['BUCKET']}/banking/pickles/k-neighbors/model\"\n",
+    "      storageUri: \"s3://{config['BUCKET']}/banking/pickles/logisticregression/model\"\n",
     "\"\"\"\n",
     "\n",
     "os.makedirs(\"manifests\", exist_ok=True)\n",
