refactor tree visualizer

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -77,15 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip3 install pydotplus graphviz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -446,6 +437,59 @@
     "\n",
     "    # save image\n",
     "    plt.savefig(\"model_artifacts/permutation_importance.png\", bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "VtQGsSNU8hWc"
+   },
+   "source": [
+    "## Decision Tree Visualization\n",
+    "\n",
+    "Reference: https://towardsdatascience.com/visualizing-decision-trees-with-python-scikit-learn-graphviz-matplotlib-1c50b4aa68dc \n",
+    "\n",
+    "If using non air-gap env, optionally install the below packages and utilize the below function for visualizing tree-based models used in this tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip3 install --proxy <PROXY> pydotplus graphviz \n",
+    "#!pip3 install pydotplus graphviz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "rxKIpaE-g-b1"
+   },
+   "source": [
+    "```python\n",
+    "from pydotplus import graph_from_dot_data\n",
+    "import graphviz\n",
+    "def model_tree_visualization(model):\n",
+    "    # generate visualization\n",
+    "    tree_dot_data = tree.export_graphviz(\n",
+    "        decision_tree=model.estimators_[0, 0],  # Get the first tree,\n",
+    "        label=\"all\",\n",
+    "        feature_names=X_train.columns,\n",
+    "        filled=True,\n",
+    "        rounded=True,\n",
+    "        proportion=True,\n",
+    "        impurity=False,\n",
+    "        precision=1,\n",
+    "    )\n",
+    "\n",
+    "    # save image\n",
+    "    graph_from_dot_data(tree_dot_data).write_png(\"model_artifacts/Decision_Tree_Visualization.png\")\n",
+    "\n",
+    "    # show tree\n",
+    "    return graphviz.Source(tree_dot_data)\n",
+    "```"
    ]
   },
   {
