EZAF-4067 | remote ip and add local svc details

--- a/Data-Science/Ray-CPU/run_cpu.ipynb
+++ b/Data-Science/Ray-CPU/run_cpu.ipynb
@@ -50,7 +50,7 @@
     "import time\n",
     "\n",
     "# Ray cluster information\n",
-    "ray_head_ip = \"10.224.226.40\"\n",
+    "ray_head_ip = \"kuberay-head-svc.kuberay.svc.cluster.local\"\n",
     "ray_head_port = 8265\n",
     "ray_address = f\"http://{ray_head_ip}:{ray_head_port}\"\n",
     "\n",
