--- a/Data-Science/Ray/Fibonacci/run.ipynb
+++ b/Data-Science/Ray/Fibonacci/run.ipynb
@@ -35,7 +35,7 @@
     "import time\n",
     "\n",
     "# Ray cluster information\n",
-    "ray_head_ip = \"10.224.226.40\"\n",
+    "ray_head_ip = \"kuberay-head-svc.kuberay.svc.cluster.local\"\n",
     "ray_head_port = 8265\n",
     "ray_address = f\"http://{ray_head_ip}:{ray_head_port}\"\n",
     "\n",
@@ -65,14 +65,6 @@
     "print(f\"Ray job logs for job_id {job_id}: {get_job_logs}\")\n",
     "print(f\"Ray job info for job_id {job_id}: {get_job_info}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40cb0a56-9c33-42e7-abec-fb5ea1f637e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
