correct variable usage

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -545,7 +545,7 @@
     "        mlflow.log_metric(\"Train Loss\", s)\n",
     "\n",
     "    # Save model to artifacts\n",
-    "    mlflow.sklearn.log_model(model, experiment_name)\n",
+    "    mlflow.sklearn.log_model(model, artifact_path)\n",
     "\n",
     "    # log charts\n",
     "    mlflow.log_artifacts(\"model_artifacts\")\n",
@@ -737,7 +737,7 @@
     "    raise Exception(f\"Found no runs for experiment '{experiment_name}'\")\n",
     "\n",
     "best_run = mlflow.get_run(best_run_df.at[0, 'run_id'])\n",
-    "best_model_uri = f\"{best_run.info.artifact_uri}/model\"\n",
+    "best_model_uri = f\"{best_run.info.artifact_uri}/{experiment_name}\"\n",
     "with open('best-model-uri.txt','w+') as f:\n",
     "    f.write(best_model_uri)\n",
     "best_model = mlflow.sklearn.load_model(best_model_uri)"
