Updated Spark Examples to latest images

--- a/Data-Analytics/Spark-S3-secret/spark-secret-creation.ipynb
+++ b/Data-Analytics/Spark-S3-secret/spark-secret-creation.ipynb
@@ -1,26 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Spark S3 proxy secret\n",
-    "### This notebook demonstrates an example of creation of s3 secret for spark application consumption."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 1,
+   "id": "224421d0-a7d6-4879-860e-7f68523deefe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "secret/spark-s3-secret created\n",
+      "Secret creation successful!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error from server (NotFound): secrets \"spark-s3-secret\" not found\n"
+     ]
     }
    ],
    "source": [
-    "import os\n",
-    "import subprocess\n",
-    "\n",
-    "\n",
     "def deploy_s3_secret(namespace, spark_secret):\n",
     "    try:\n",
     "        # Run kubectl apply command using subprocess\n",
@@ -35,15 +39,7 @@
     "s3_secret_data = \"spark.hadoop.fs.s3a.secret.key EXAMPLE_SECRET_KEY\"\n",
     "\n",
     "s3_data = s3_access_data.replace('EXAMPLE_ACCESS_KEY', os.environ['AUTH_TOKEN'])\n",
-    "s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\", \"s3\")\n",
-    "\n",
-    "#To connect directly to S3 object, comment the above 2 lines and\n",
-    "#uncomment the following 2 lines.\n",
-    "#Replace the <S3_OBJECT_STORE_ACCESS_KEY> with object store access key\n",
-    "#Replace the <S3_OBJECT_STORE_SECRET_KEY> with object store secret key\n",
-    "\n",
-    "#s3_data = s3_access_data.replace('EXAMPLE_ACCESS_KEY', <S3_OBJECT_STORE_ACCESS_KEY>)\n",
-    "#s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\",  <S3_OBJECT_STORE_SECRET_KEY>)\n",
+    "s3_data += \"\\n\" + s3_secret_data.replace(\"EXAMPLE_SECRET_KEY\", \"s3\")    \n",
     "\n",
     "namespace = os.environ['USER']\n",
     "spark_secret = \"spark-s3-secret\"\n",
@@ -55,23 +51,18 @@
     "\n",
     "# Call the function to deploy the Kubernetes secret\n",
     "deploy_s3_secret(namespace, spark_secret)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2dd572-d308-4bb3-852e-b073f538f684",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "colab": {
-   "authorship_tag": "ABX9TyMUyEIXKPIvKiU5I2T//pwx",
-   "collapsed_sections": [],
-   "include_colab_link": true,
-   "name": "MLflow-example-notebook.ipynb",
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -87,10 +78,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
-
